--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ header h1 {
 	padding: 5px;
 	border-bottom: 3px solid #77a466;
 }
+
 header h1 span {
 	color: #77a466;
 }
@@ -93,7 +94,6 @@ header nav ul li a {
 	color:#77a466;
 }
 
-/*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
 	margin: 0 auto;
@@ -166,7 +166,6 @@ header nav ul li a {
 	line-height: 24px;
 }
 
-/*The widths are in a percentage!*/
 footer {
 	height: 50px;
 	width: 100%;
@@ -187,9 +186,41 @@ footer span {
 }
 
 
+/*----------- Tablet styles ------------*/
 @media all and (min-width:768px) {
-	/* Tablet styles here */
+
+header {
+	margin: 0 auto;
+	display: flex;
+	flex-flow: nowrap;
+	justify-content: start;
+	align-items: center;
+}
 	
+header h1 {
+	margin-left: 0;
+	padding: 20px 0;
+	padding-right: 125px;
+	display: flex;
+	justify-content: flex-start;
+}
+	
+header nav {
+	padding: 46px 0;
+	display: flex;
+	flex-flow: nowrap;
+	justify-content: flex-end;
+	align-items: center;
+}
+	
+header nav ul {
+	margin: 0;
+}
+	
+header nav ul li {
+	padding: 0;
+}	
+
 .bottom-section {
 	width: 100%;
 	display: flex;
@@ -227,42 +258,14 @@ footer span {
 	border-right: 1px solid #eee;
 }  
 
-header {
-	margin: 0 auto;
-	display: flex;
-    flex-flow: nowrap;
-	justify-content: start;
-	align-items: center;
-	
-}
-
-header h1 {
-	margin-left: 0;
-	padding: 20px 0;
-	padding-right: 125px;
-	display: flex;
-	justify-content: flex-start;
-}
-
- header nav {
-	padding: 46px 0;
-	display: flex;
-	flex-flow: nowrap;
-	justify-content: flex-end;
-	align-items: center;
-}
-
-header nav ul {
-	margin: 0;
-}
-
-header nav ul li {
-	padding: 0;
-}
-
 }
  
+
+/*------------ Desktop styles -------------*/
 @media all and (min-width:1200px) {
-    /* Desktop styles here */
+ 
+	header {
+		font-size: 1.8em;
+	}
  
 }
