--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 	font-family: 'Wisdom Script';
 	src: url('../fonts/wisdom-script.otf') format('opentype');
 }
+/*------- Default styles. Mobile-first -------*/
 
 html {
     font-size:16px;
@@ -205,7 +206,7 @@ header h1 {
 	padding: 20px 0;
 	border: none;
 	text-align: left;
-	width: 30%;
+	width: 100%;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -218,7 +219,7 @@ header nav {
 	justify-content: flex-end;
 	align-items: center;  
 	text-align: right;
-	width: 70%;
+	width: 100%;
 }
 	
 header nav ul {
