--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,6 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 0.875em;
-	padding: 5px;
 	list-style: none;
 }
 header nav ul li a {
@@ -197,7 +196,8 @@ header {
 	margin: 0 auto;
 	display: flex;
 	flex-flow: nowrap;
-    justify-content: center;
+	justify-content: center; 
+	text-align: center;
 }
 	
 header h1 {
@@ -253,7 +253,7 @@ header nav ul li {
 .section-two h4,
 .section-three h4 {
 	padding: 5px 7px;
-	font-size: 0.9em;
+	font-size: 1em;
 	line-height: 25px;
 }
 
